<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/centers_list"
        android:title="@string/nav_drawer_centers"
        android:icon="@drawable/ic_drawer_item"/>
    <item
        android:id="@+id/centers_map"
        android:title="@string/nav_drawer_centers_map"
        android:icon="@drawable/ic_drawer_item"/>
    <item
        android:id="@+id/recipients"
        android:title="@string/nav_drawer_recipients"
        android:icon="@drawable/ic_drawer_item"/>
    <item
        android:id="@+id/hotline"
        android:title="@string/nav_drawer_hotline"
        android:icon="@drawable/ic_drawer_item"/>
    <item
        android:id="@+id/news"
        android:title="@string/nav_drawer_news"
        android:icon="@drawable/ic_drawer_item"/>
    <item
        android:id="@+id/events"
        android:title="@string/nav_drawer_events"
        android:icon="@drawable/ic_drawer_item"/>

</menu>